preamble_math: introduce \bvec and use it in some docs

--- a/advanced-programming.tex
+++ b/advanced-programming.tex
@@ -10,7 +10,7 @@
 \usepackage{preamble_svg}
 %\usepackage{preamble_code}
 
-\renewcommand{\vec}[1]{\bm{#1}}
+\renewcommand{\vec}[1]{\bvec{#1}}
 
 \begin{document}
 
