preamble_math: add floor and ceil

--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -47,6 +47,11 @@
 \newcommand{\half}{\frac{1}{2}}
 \newcommand{\oneover}[1]{\frac{1}{#1}}
 
+% Floor and ceil
+% https://tex.stackexchange.com/questions/118173/how-to-write-ceil-and-floor-in-latex
+\DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
+
 % Stats stuff
 \newcommand{\cov}{{\operatorfont cov}}
 \renewcommand{\var}{{\operatorfont var}}
